--- a/agi_av_import_export/build.gradle
+++ b/agi_av_import_export/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath group: 'ch.so.agi', name: 'gretl',  version: '2.0.+'
+		classpath group: 'ch.so.agi', name: 'gretl',  version: '2.0.100'
 	}
 }
 
@@ -44,6 +44,7 @@ if (gretlEnvironment == "test") {
 }
 */
 
+/*
 task downloadFiles(type: FtpDownload){
     server = ftpServerInfogrips
     user = ftpUserInfogrips
@@ -60,61 +61,63 @@ task downloadFiles(type: FtpDownload){
         println "Files downloaded: " + pathToTempFolder
     }   
 }
+*/
 
-// def systemTypeKey = "WINDOWS" 
-// def remoteFileName = "DM01AVSO24LV95\\itf\\240100.zip"
-// def localFileName = "240100.zip"
+/*
+def systemTypeKey = "WINDOWS" 
+def remoteFileName = "DM01AVSO24LV95\\itf\\240100.zip"
+def localFileName = "240100.zip"
 
-// task downloadFile() {
-//     doLast {
-//         def ftp = new FTPClient()
+task downloadFile() {
+    doLast {
+        def ftp = new FTPClient()
 
-//         try {            
-//             ftp.connect("ftp.infogrips.ch", 21)
+        try {            
+            ftp.connect("ftp.infogrips.ch", 21)
 
-//             ftp.enterLocalPassiveMode() // Not needed when running locally on MacOS.
-//             ftp.login("vaso", "vaso123")
+            ftp.enterLocalPassiveMode() // Not needed when running locally on MacOS.
+            ftp.login("vaso", "vaso123")
 
-//             //ftp.setFileType(FTP.BINARY_FILE_TYPE);
-//             //ftp.setFileTransferMode(org.apache.commons.net.ftp.FTP.COMPRESSED_TRANSFER_MODE);
-//             //ftp.setAutodetectUTF8(true);
+            ftp.setFileType(FTP.BINARY_FILE_TYPE);
+            //ftp.setFileTransferMode(org.apache.commons.net.ftp.FTP.COMPRESSED_TRANSFER_MODE);
+            //ftp.setAutodetectUTF8(true);
 
-//             ftp.configure(new FTPClientConfig(systemTypeKey)); 
+            ftp.configure(new FTPClientConfig(systemTypeKey)); 
 
-//             int reply = ftp.getReplyCode();
-//             if(!FTPReply.isPositiveCompletion(reply)) {
-//                 throw new Exception("FTP server refused connection.")
-//             }
+            int reply = ftp.getReplyCode();
+            if(!FTPReply.isPositiveCompletion(reply)) {
+                throw new Exception("FTP server refused connection.")
+            }
 
-//             String fileName = Paths.get(pathToTempFolder, localFileName).toFile().getAbsoluteFile()
-//             FileOutputStream fos = new FileOutputStream(fileName)
+            String fileName = Paths.get(pathToTempFolder, localFileName).toFile().getAbsoluteFile()
+            FileOutputStream fos = new FileOutputStream(fileName)
 
-//             boolean response = ftp.retrieveFile(remoteFileName, fos)
+            boolean response = ftp.retrieveFile(remoteFileName, fos)
 
-//             if (response == false) {
-//                 throw new Exception("Could not retrieve file: " + remoteFileName)
-//             }
-//             println "File downloaded: " + fileName
-//         } catch (Exception e) {
-//             GradleException ge = TaskUtil.toGradleException(e)
-//             throw ge
-//         } finally {
-//             if (ftp.isConnected()) {
-//                 try {
-//                     ftp.disconnect()
-//                 } catch(IOException e) {
-//                     // do nothing
-//                 }
-//             }
-//         }
-//     }
-// }
-
+            if (response == false) {
+                throw new Exception("Could not retrieve file: " + remoteFileName)
+            }
+            println "File downloaded: " + fileName
+        } catch (Exception e) {
+            GradleException ge = TaskUtil.toGradleException(e)
+            throw ge
+        } finally {
+            if (ftp.isConnected()) {
+                try {
+                    ftp.disconnect()
+                } catch(IOException e) {
+                    // do nothing
+                }
+            }
+        }
+    }
+}
+*/
 // import java.util.zip.ZipInputStream
 // import java.util.zip.ZipEntry
 // import java.io.FileOutputStream
 
-task unzipData(dependsOn: 'downloadFiles') {
+task unzipData(/* dependsOn: 'downloadFile' */) {
     doLast {
         fileTree(pathToTempFolder).files.each { 
             String fileName = it
@@ -134,27 +137,21 @@ task unzipData(dependsOn: 'downloadFiles') {
     }
 }
 
-        ArrayList<String> foo = ['foo', 'bar']
 
 task importData(type: Ili2pgReplace, dependsOn: 'unzipData') {
-        doFirst {
-            foo = fileTree(pathToUnzipFolder).filter { it.isFile() }.files.name
-            println foo.getClass()
-            println foo
-        }
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    models = 'DM01AVSO24LV95'
+    dbschema = 'agi_dm01avso24'
+    //dataFile = fileTree(pathToUnzipFolder) { include '*.itf' }
+    //dataset = fileTree(pathToUnzipFolder).matching { include "*.itf" }
+    dataFile = "/var/folders/5r/cn9700vd4s719l1555_2zcs80000gn/T/agiavimport-3802844963390050294/unzip_data/240100.ITF"
+    dataset = "240100"
 
-        database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-        models = 'DM01AVSO24LV95'
-        dbschema = 'agi_dm01avso24'
-        dataFile = fileTree(pathToUnzipFolder) { include '**/*.itf' }
-        //dataset = fileTree(pathToUnzipFolder).filter { it.isFile() }.files.name
-        dataset = fileTree(pathToUnzipFolder) { include '**/*.itf' }
-        disableValidation = true
+    disableValidation = true
 
-        doLast {
-            println "Data imported into db: " + dbUriEdit
-        }        
-
+    doLast {
+        println "Data imported into db: " + dbUriEdit
+    }
 }
 //GrETL
 /*
