--- a/alw_strukturverbesserungen_pub/build.gradle
+++ b/alw_strukturverbesserungen_pub/build.gradle
@@ -3,9 +3,9 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transfer_SV-GIS'
+defaultTasks 'transfer_SVGIS'
 
-task transfer_SV-GIS(type: Db2Db){
+task transfer_SVGIS(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
