--- a/alw_strukturverbesserungen_pub/build.gradle
+++ b/alw_strukturverbesserungen_pub/build.gradle
@@ -9,6 +9,7 @@ task transfer_SVGIS(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
+            new TransferSet('projekt.sql', 'alw_strukturverbesserungen_pub.strukturvrbssrung_projekt', true),
             new TransferSet('beizugsgebiet.sql', 'alw_strukturverbesserungen_pub.strukturvrbssrung_beizugsgebiet', true),
             new TransferSet('gemeinde.sql', 'alw_strukturverbesserungen_pub.strukturvrbssrung_gemeinde', true),
             new TransferSet('genossenschaft.sql', 'alw_strukturverbesserungen_pub.strukturvrbssrung_genossenschaft', true),
