--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -36,7 +36,7 @@ task checkXtfName(dependsOn: 'opyXtfFile') {
     description = "Prüft, ob die ersten vier Buchstaben der BFS-Nr. einer Nummer entsprechen, die im BfS-Range des Kt. SO liegt."    
     doFirst {
         def bfsRange = 2401..2622
-        def bfsNr = [string('dataset']
+        def bfsNr = [string('dataset')]
         assert true == bfsRange.contains(bfsNr)
     }
 }
@@ -47,7 +47,7 @@ task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
     dbschema = "arp_npl"
     models = "SO_Nutzungsplanung_20171118"
     disableValidation = false
-    dataset = [string('dataset']
+    dataset = [string('dataset')]
     dataFile = [file("upload/uploadFile.xtf")]
 }
 
