--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -32,7 +32,7 @@ task copyXtfFile(type: Copy) {
     rename("uploadFile", "uploadFile.xtf")
 }
 
-task checkXtfName(dependsOn: 'opyXtfFile') {
+task checkXtfName(dependsOn: 'copyXtfFile') {
     description = "Prüft, ob die ersten vier Buchstaben der BFS-Nr. einer Nummer entsprechen, die im BfS-Range des Kt. SO liegt."    
     doFirst {
         def bfsRange = 2401..2622
