--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -36,7 +36,7 @@ task checkXtfName(dependsOn: 'copyXtfFile') {
     description = "Prüft, ob die ersten vier Buchstaben der BFS-Nr. einer Nummer entsprechen, die im BfS-Range des Kt. SO liegt."    
     doFirst {
         def bfsRange = 2401..2622
-        def bfsNr = 'dataset' as int
+        def bfsNr = Ili2pgDataset as int
         assert true == bfsRange.contains(bfsNr)
     }
 }
@@ -47,7 +47,7 @@ task replaceDataset (type: Ili2pgReplace, dependsOn: 'copyXtfFile') {
     dbschema = "arp_npl"
     models = "SO_Nutzungsplanung_20171118"
     disableValidation = true
-    dataset = dataset
+    dataset = Ili2pgDataset
     dataFile = "upload/uploadFile.xtf"
 }
 
