--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -31,17 +31,17 @@ task copyXtfFile(type: Copy) {
     include("uploadFile")
     rename("uploadFile", "uploadFile.xtf")
 }
-
+/*
 task checkBsfNummer(dependsOn: 'copyXtfFile') {
     description = "Prüft, ob die ersten vier Buchstaben der BFS-Nr. einer Nummer entsprechen, die im BfS-Range des Kt. SO liegt."    
     doFirst {
         def bfsRange = 2401..2622
-        def bfsNr = 'Ili2pgDataset' as int
+        def bfsNr = 'Ili2pgDataset' 
         assert true == bfsRange.contains(bfsNr)
     }
 }
-
-task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkBsfNummer') {
+*/
+task replaceDataset (type: Ili2pgReplace, dependsOn: 'copyXtfFile') {
     description = "Ersetzt einen Datensatz (=XTF) in der Erfassungsdatenbank."
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = "arp_npl"
